...
//

import UIKit

class IsoProcessViewController: UIViewController {
    
    var fluidName: String = "Water"
    
    private var isCurrentResultSaved: Bool = false
    
    private let subtitleLabel: UILabel = {
        let label = UILabel()
        label.font = .sfMono(size: adaptiveSize(phone: 12, pad: 14), weight: .bold)
...
        label.isHidden = true
        label.translatesAutoresizingMaskIntoConstraints = false
        return label
    }()
    
    private let viewModeSegment: CustomSegmentedControl = {
        let sc = CustomSegmentedControl(items: ["Thermodynamic", "Transport"])
        sc.selectedSegmentIndex = 0
        sc.isHidden = true
        sc.translatesAutoresizingMaskIntoConstraints = false
        return sc
    }()
    
...
        super.viewWillAppear(animated)
        navigationItem.rightBarButtonItems?.first?.menu = createOptionsMenu()
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        title = "Iso-process table"
        view.backgroundColor = .appBackground
        inputCard.delegate = self
        
        setupLayout()
        configureInitialState()
        setupTapToDismissKeyboard()
...
